--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,9 @@
 <h1>This is a list of tasks</h1>
 
 <ul>
-<% @tasks.each do |task| %>
-  <li> <%= link_to "#{task.title}", task_path(task) %> | <%= link_to "Delete task", task_path(task), method: :delete, data: { confirm: "Are you sure?" } %> </li>
-<% end %>
+  <% @tasks.each do |task| %>
+  <li> <%= link_to task.title, task_path(task) %> | <%= link_to "Delete task", task_path(task), method: :delete, data: { confirm: "Are you sure?" } %> </li>
+  <% end %>
 </ul>
 
-<%= link_to "Add a new task", tasks_new_path %>
+<%= link_to "Add a new task", new_task_path %>
