--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= @task.details %></h2>
 
-<%= link_to "Edit this task", task_edit_path(@task) %>
+<%= link_to "Edit this task", edit_task_path(@task) %>
 
 <% if @task.completed %>
   <p> This task is done</p>
